--- a/demo/index.html
+++ b/demo/index.html
@@ -11,6 +11,6 @@
 
         <!-- Add your site or application content here -->
         <div class="box">This is a box</div>
-        <script src="/dist/test.js"></script>
+        <script src="test.js"></script>
     </body>
 </html>
