--- a/demo/index.html
+++ b/demo/index.html
@@ -11,6 +11,6 @@
 
         <!-- Add your site or application content here -->
         <div class="box">This is a box</div>
-        <script src="/dist/kernel.js"></script>
+        <script src="../dist/kernel.js"></script>
     </body>
 </html>
