--- a/demo/index.html
+++ b/demo/index.html
@@ -10,7 +10,7 @@
     <body>
 
         <!-- Add your site or application content here -->
-        <div class="box">This is a box</div>
+        <div class="box">This is a box<a href="#" clasS="btn">btn</a></div>
         <script src="/dist/test.js"></script>
     </body>
 </html>
