added first test

--- a/demo/index.html
+++ b/demo/index.html
@@ -11,6 +11,7 @@
 
         <!-- Add your site or application content here -->
         <div class="box">This is a box<a href="#" clasS="btn">btn</a></div>
+        <table class="table"><tr><td class="one">dd</td><td class="two">dd</td></tr></table>
         <script src="/dist/test.js"></script>
     </body>
 </html>
