ES6 cleaned up and tested

--- a/demo/index.html
+++ b/demo/index.html
@@ -10,23 +10,46 @@
 	<body>
 
 		<!-- Add your site or application content here -->
-		<div class="box" style="padding:10px;background:grey;margin:10px;">
+		<div class="box" style="padding:10px;background:grey;margin:10px 0;">
 			<h3>This is box 1</h3>
-			<a href="#" class="button js--button-1">btn 1</a>
-			<a href="#" class="button js--button-2">btn 2</a>
+			<a href="#" class="button js--button-1">TEST scrollTo box 3</a>
+			<a href="#" class="button js--button-2">TEST remove box 2</a>
 		</div>
 
-		<div class="box" style="padding:10px;background:grey;margin:10px;">This is box 2<a href="#" class="button js--button-1">btn</a></div>
+		<div class="box" style="padding:10px;background:grey;margin:10px 0;">This is box 2<a href="#" class="button js--button-3">generic button</a></div>
 		
 
-		<article class="test-class-2" id="testId1">
+		<article class="test-class-2" id="testId1" style="background:#eee;height:1600px;">
 			<section class="test-class-2" id="testId2">
 				<aside class="test-class-3" id="testId3">
-					<table id="table"><tr><td class="one">dd</td><td class="two">dd</td></tr></table>
+					<table id="table">
+						<tr>
+							<td class="one">dd</td>
+							<td class="two">dd</td>
+						</tr>
+						<tr>
+							<td class="one">dd</td>
+							<td class="two">dd</td>
+						</tr>
+						<tr>
+							<td class="one">dd</td>
+							<td class="two">dd</td>
+						</tr>
+						<tr>
+							<td class="one">dd</td>
+							<td class="two">dd</td>
+						</tr>
+						<tr>
+							<td class="one">dd</td>
+							<td class="two">dd</td>
+						</tr>
+					</table>
 				</aside>
 			</section>
+			
 		</article>
 
+		<div class="box" style="padding:10px;background:grey;margin:10px 0;">This is box 3<a href="#" class="button js--button-4">TEST scrollTo box 1</a></div>
 
 
 		<script src="/dist/test.js"></script>
