added emmet and readme

--- a/demo/index.html
+++ b/demo/index.html
@@ -17,7 +17,7 @@
 		</div>
 
 		<div class="box" style="padding:10px;background:grey;margin:10px 0;">This is box 2<a href="#" class="button js--button-3">generic button</a></div>
-		
+
 
 		<article class="test-class-2" id="testId1" style="background:#eee;height:1600px;">
 			<section class="test-class-2" id="testId2">
@@ -46,11 +46,11 @@
 					</table>
 				</aside>
 			</section>
-			
+
 		</article>
 
 		<div class="box" style="padding:10px;background:grey;margin:10px 0;">This is box 3<a href="#" class="button js--button-4">TEST scrollTo box 1</a></div>
-
+		<div class="container"></div>
 
 		<script src="/dist/test.js"></script>
 	</body>
