--- a/demo/index.html
+++ b/demo/index.html
@@ -7,6 +7,11 @@
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
+	<style>
+		.move {
+			background-color: tomato; padding: 20px; width: 30px; will-change: transform; position: absolute;
+		}
+	</style>
 	<body>
 
 		<!-- Add your site or application content here -->
